--- a/META.yml
+++ b/META.yml
@@ -3,6 +3,7 @@ author: 'Adam Kennedy <cpan@ali.as>, L<http://ali.as/>'
 build_requires:
   Cwd: 0
   File::Remove: 0.22
+  Module::Build: 0
   Test::More: 0.47
 distribution_type: module
 generated_by: Module::Install version 0.50
@@ -27,4 +28,4 @@ requires:
   PITA::Report: 0.07
   Params::Util: 0.07
   perl: 5.005
-version: 0.04
+version: 0.05
