Import of ADAMK/PITA-Scheme-0.06 from CPAN.
gitpan-cpan-distribution: PITA-Scheme
gitpan-cpan-version:      0.06
gitpan-cpan-path:         ADAMK/PITA-Scheme-0.06.tar.gz
gitpan-cpan-author:       ADAMK
gitpan-cpan-maturity:     released

--- a/t/02_prepare/injector/scheme.conf
+++ b/t/02_prepare/injector/scheme.conf
@@ -6,4 +6,5 @@ authority=cpan
 authpath=/authors/id/A/AD/ADAMK/PITA-Test-Dummy-Perl5-Make-1.01.tar.gz
 
 [instance]
-result_uri=
+support_server=http://10.0.2.2/
+job_id=1234
