--- a/META.yml
+++ b/META.yml
@@ -6,7 +6,7 @@ build_requires:
   Module::Build: 0
   Test::More: 0.47
 distribution_type: module
-generated_by: Module::Install version 0.50
+generated_by: Module::Install version 0.52
 license: perl
 name: PITA-Scheme
 no_index:
@@ -20,13 +20,11 @@ requires:
   File::Spec: 0.80
   File::Temp: 0
   HTTP::Request::Common: 0
-  IPC::Cmd: 0.24
-  IPC::Open3: 0
-  IPC::Run: 0.78
+  IPC::Run3: 0.034
   LWP: 5.54
   LWP::UserAgent: 0
   PITA::Report: 0.07
   Params::Util: 0.07
   URI: 0
   perl: 5.005
-version: 0.06
+version: 0.08
