--- a/META.yml
+++ b/META.yml
@@ -21,7 +21,7 @@ requires:
   File::Temp: 0
   File::Which: 0
   IPC::Run3: 0.034
-  PITA::Report: 0.07
+  PITA::XML: 0.10
   Params::Util: 0.07
   perl: 5.005
-version: 0.09
+version: 0.10
