--- a/META.yml
+++ b/META.yml
@@ -1,29 +1,32 @@
-
+--- 
+abstract: PITA Testing Schemes
+author: Adam Kennedy <cpan@ali.as>, L<http://ali.as/>
+build_requires: 
+  Cwd: 0
+  File::Remove: 0.34
+  Module::Build: 0.28
+  Test::More: 0.47
+distribution_type: module
+generated_by: Module::Install version 0.65
+license: perl
+meta-spec: 
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
+name: PITA-Scheme
 no_index: 
   directory: 
     - inc
     - t
-generated_by: Module::Install version 0.60
-distribution_type: module
-version: 0.29
-name: PITA-Scheme
-author: Adam Kennedy <cpan@ali.as>, L<http://ali.as/>
-license: perl
-build_requires: 
-  File::Remove: 0.22
-  Test::More: 0.47
-  Module::Build: 0
-  Cwd: 0
 requires: 
-  Process: 0.16
-  File::pushd: 0
-  File::Spec: 0.80
-  File::Which: 0
+  Archive::Extract: 0.16
   Carp: 0
-  perl: 5.005
-  Params::Util: 0.10
-  Archive::Extract: 0.07
+  File::Spec: 0.80
   File::Temp: 0
-  IPC::Run3: 0.034
-  PITA::XML: 0.29
-abstract: PITA Testing Schemes
+  File::Which: 0.05
+  File::pushd: 0.99
+  IPC::Run3: 0.036
+  PITA::XML: 0.30
+  Params::Util: 0.23
+  Process: 0.16
+  perl: 5.005
+version: 0.30
