--- a/META.yml
+++ b/META.yml
@@ -1,25 +1,26 @@
---- 
-abstract: PITA Testing Schemes
-author: Adam Kennedy <adamk@cpan.org>, L<http://ali.as/>
-build_requires: 
+---
+abstract: 'PITA Testing Schemes'
+author:
+  - 'Adam Kennedy <adamk@cpan.org>, L<http://ali.as/>'
+build_requires:
   Cwd: 0
   File::Remove: 0.34
   Module::Build: 0.28
   Test::More: 0.47
 distribution_type: module
-generated_by: Module::Install version 0.67
+generated_by: 'Module::Install version 0.77'
 license: perl
-meta-spec: 
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+module_name: PITA::Scheme
 name: PITA-Scheme
-no_index: 
-  directory: 
+no_index:
+  directory:
     - inc
     - t
-requires: 
+requires:
   Archive::Extract: 0.18
-  Carp: 0
   File::Spec: 0.80
   File::Temp: 0
   File::Which: 0.05
@@ -28,5 +29,7 @@ requires:
   PITA::XML: 0.40
   Params::Util: 0.23
   Process: 0.16
-  perl: 5.005
-version: 0.40
+  perl: 5.6.0
+resources:
+  license: http://dev.perl.org/licenses/
+version: 0.41
